* Ajout des owner syndic buildings dans list et show

--- a/projet/api_bo/translations/common.fr.yml
+++ b/projet/api_bo/translations/common.fr.yml
@@ -21,3 +21,12 @@ menu:
   show: Afficher
   remove: Supprimer
   edit: Éditer
+
+owner:
+  owner: Propriétaire
+
+syndic:
+  syndic: Syndic
+
+building:
+  building: Immeuble(s)
